--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lambda-atlas-create-doc",
-  "version": "1.0.0",
-  "description": "A demo lambda function that creates a document into a MongoDB Atlas database",
+  "version": "1.1.0",
+  "description": "A demo lambda function that creates a document into a MongoDB Atlas database - compatible with MongoDB Node.js driver 3.0+",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,6 +12,6 @@
   "author": "Raphael Londner",
   "license": "Apache-2.0",
   "dependencies": {
-    "mongodb": "^2.2.25"
+    "mongodb": "^3.0.5"
   }
 }
